--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,7 +174,7 @@
             app:cardBackgroundColor="@color/colorAccent"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView7"
+            app:layout_constraintBottom_toTopOf="@+id/emp_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -196,7 +196,7 @@
 
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/emp_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="1dp"
@@ -206,10 +206,10 @@
             android:textColor="@android:color/darker_gray"
             android:typeface="sans"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView8" />
+            app:layout_constraintEnd_toStartOf="@+id/designation" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/designation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
