--- a/app/src/main/res/layout/inbox_item.xml
+++ b/app/src/main/res/layout/inbox_item.xml
@@ -51,7 +51,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/emp_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -59,7 +59,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/designation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Recieved Notification"
