--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:background="@android:color/transparent"
-android:orientation="vertical"
->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/parentview"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
 
 
     <androidx.cardview.widget.CardView
@@ -14,6 +16,7 @@ android:orientation="vertical"
         android:layout_margin="10dp"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="1dp"
+
         app:cardElevation="5dp">
 
         <LinearLayout
@@ -24,11 +27,12 @@ android:orientation="vertical"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="30dp"
+                android:id="@+id/emppic"
+                android:layout_width="10dp"
                 android:layout_height="80dp"
 
                 android:layout_weight="1"
+                android:scaleType="fitStart"
                 app:srcCompat="@drawable/avatar" />
 
             <LinearLayout
@@ -39,7 +43,7 @@ android:orientation="vertical"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/emp_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -47,7 +51,7 @@ android:orientation="vertical"
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/designation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -82,7 +86,7 @@ android:orientation="vertical"
                             app:srcCompat="@drawable/map_marker" />
 
                         <TextView
-                            android:id="@+id/textView9"
+                            android:id="@+id/city"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
@@ -90,31 +94,6 @@ android:orientation="vertical"
                             android:text="DHA"
                             android:textSize="12dp" />
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:layout_gravity="right"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/imageView10"
-                            android:layout_width="14dp"
-                            android:layout_height="14dp"
-                            android:layout_gravity="bottom"
-                            android:layout_weight="1"
-                            app:srcCompat="@drawable/star" />
-
-                        <TextView
-                            android:id="@+id/textView10"
-                            android:layout_width="110dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="bottom"
-                            android:layout_weight="16"
-                            android:text="4.3/5"
-                            android:textSize="10sp" />
                     </LinearLayout>
 
                 </LinearLayout>
